--- a/content/blog/2021-06-15_bolle.md
+++ b/content/blog/2021-06-15_bolle.md
@@ -8,7 +8,7 @@ updated = "2025-07-25"
 tags = ["baking", "sweets"]
 +++
 
-**Best “Bolle” recipe I've tried so far! 😊**
+**Best "Bolle" recipe I've tried so far! 😊**
 
 Tangzhong buns—also known as *Boller* in Norwegian—are regular buns made extra soft and fluffy thanks to a simple flour-and-milk paste (called a roux or thickening) that's added to the dough. The result? Incredibly juicy and airy buns you'll want to make again and again.
 
