feat: optimize about me (#17)
* feat: add opinion

* fix: replace quotes

* fix: double quotes and text

* fix: remove unused style

* feature: flotaed image

* fix: height and style of image

* fix: color more readable in gallery figure

--- a/content/blog/2021-06-15_bolle.md
+++ b/content/blog/2021-06-15_bolle.md
@@ -8,9 +8,9 @@ updated = "2025-07-25"
 tags = ["baking", "sweets"]
 +++
 
-**Best “Bolle” recipe I’ve tried so far! 😊**
+**Best "Bolle" recipe I've tried so far! 😊**
 
-Tangzhong buns—also known as *Boller* in Norwegian—are regular buns made extra soft and fluffy thanks to a simple flour-and-milk paste (called a roux or thickening) that’s added to the dough. The result? Incredibly juicy and airy buns you’ll want to make again and again.
+Tangzhong buns—also known as *Boller* in Norwegian—are regular buns made extra soft and fluffy thanks to a simple flour-and-milk paste (called a roux or thickening) that's added to the dough. The result? Incredibly juicy and airy buns you'll want to make again and again.
 
 ---
 
