fix: wording in article

--- a/content/blog/2025-02-11_gran-can.md
+++ b/content/blog/2025-02-11_gran-can.md
@@ -1,27 +1,28 @@
 +++
 title = "Gran Canaria - Escape winter in Norway"
+description = "A February escape to Gran Canaria with friends. Highlights include a stay at Lopesan Baobab Resort, heated pool sessions, and culinary gems in Maspalomas and Meloneras — from Italian fine dining to perfectly grilled meats."
 date = "2025-02-11"
 
 [taxonomies]
 tags = ["spain", "gran canaria", "holiday"]
 +++
 
-In Oslo it is almost 6 month winter, cold and with just a little sunshine. No wonder, we are craving warmth, sunshine and a pool. 
+In Oslo, winter lasts almost six months — cold and with just a little sunshine. No wonder we’re craving warmth, sun and a pool!
 
 {{ smugmug(key="7TTMgT", caption="Click to view the Gran Canaria 2025 gallery" thumbnail="https://photos.smugmug.com/photos/i-bqQ4PBW/0/LBjkh4w5X7Zp7gzFMxkbT2LDqKxZcQX6WxgJ7cjx6/S/i-bqQ4PBW-S.jpg", alt="Gran Canaria 2025") }}
 
-I cannot count how many times I have been to Gran Canaria. It is not the most interesting place, but it is an island where you have also nice temperatues in wintertime and there is a direct flight from Oslo to the island. This year we travelled together with our friends Fredrik and Maren. We stayed at the [Lopesan Baobap Resort](https://www.lopesan.com/en/hotels/spain/gran-canaria/meloneras/baobab-resort/) in Meloneras. The hotel has very nice adapted wheelchair rooms. The cocktails and drinks are very good, compared to other bars in Meloneras. We love the heated pool close to the bar! It has some flat stars to go in and it is perfect for me to do some leg training. 
+I can’t count how many times I’ve been to Gran Canaria. It’s not the most exciting place, but it’s one of the few islands with pleasant winter temperatures — and there’s a direct flight from Oslo. This year, we travelled with our friends Fredrik and Maren and stayed at the [Lopesan Baobab Resort](https://www.lopesan.com/en/hotels/spain/gran-canaria/meloneras/baobab-resort/) in Meloneras. The hotel has excellent wheelchair-accessible rooms. The cocktails and drinks are surprisingly good, especially compared to other bars in Meloneras. We loved the heated pool next to the bar! It has flat steps to walk in, making it perfect for me to do some leg training.
 
-Ingunn and me did some good research to find decent places to have dinner. There are many tourist traps but we managed to find some perls.  
+Ingunn and I did some solid research to find decent places for dinner. There are many tourist traps, but we managed to discover a few gems.
 
 ## Time
 
-[Time Maspalomas](https://www.timefoodshop.es/) is for me the best italian restaurant. Everyday they have a speciality menu of the day, which I really love. You can eat fresh fish, fresh pasta, delicious pizza and everything is home made. If you are still hungry try their desserts too. The service is very nice. I love also the wine recomenndations to the food. I think that levels up the restaurant experience to new heights. Make sure to book a table because the restaurant is not that big. 
+[Time Maspalomas](https://www.timefoodshop.es/) is, in my opinion, the best Italian restaurant on the island. Every day they offer a special menu, which I really enjoy. You’ll find fresh fish, homemade pasta, delicious pizza — everything is made in-house. If you’re still hungry, don’t miss the desserts. The service is excellent, and I love their wine pairings with the food. That extra care really elevates the experience. Make sure to book in advance — the place is not very large.
 
 ## La Bodega
 
-The restaurant **La Bodega** is hidden in the hotel Palm Beach. If you are in the mood for Tapas, this is the best place. The ambiente is very cosy and the service is top notch. And of course the food is incredible good. You can order several dishes and then share with your friends. 
+**La Bodega** is a hidden gem located inside the Palm Beach Hotel. If you’re in the mood for tapas, this is the best spot. The ambiance is cosy, the service is top notch, and the food is incredibly good. You can order several dishes and share them with friends — perfect for a relaxed evening.
 
 ## El Churrasco Restaurante Grill
 
-Do you love meat? Then you have to try [El Churrasco](https://www.elchurrascorestaurante.com/). They grill the meat to your tasting. You can choose from several side dishes and sauces. Of course is a glass of red wine a must.  
+Love meat? Then you have to try [El Churrasco](https://www.elchurrascorestaurante.com/). They grill the meat to your liking, and you can choose from a variety of side dishes and sauces. Naturally, a glass of red wine is a must!
