fix: add link to bodega

--- a/content/blog/2025-02-11_gran-can.md
+++ b/content/blog/2025-02-11_gran-can.md
@@ -21,7 +21,7 @@ Ingunn and I did some solid research to find decent places for dinner. There are
 
 ## La Bodega
 
-**La Bodega** is a hidden gem located inside the Palm Beach Hotel. If you’re in the mood for tapas, this is the best spot. The ambiance is cosy, the service is top notch, and the food is incredibly good. You can order several dishes and share them with friends — perfect for a relaxed evening.
+[La Bodega](https://www.hotel-palm-beach.com/es/bares-restaurantes-maspalomas/la-bodega-tapas) is a hidden gem located inside the Palm Beach Hotel. If you’re in the mood for tapas, this is the best spot. The ambiance is cosy, the service is top notch, and the food is incredibly good. You can order several dishes and share them with friends — perfect for a relaxed evening.
 
 ## El Churrasco Restaurante Grill
 
