fix: gallery loading size change

--- a/content/blog/2025-02-11_gran-can.md
+++ b/content/blog/2025-02-11_gran-can.md
@@ -9,7 +9,7 @@ tags = ["spain", "gran canaria", "holiday"]
 
 In Oslo, winter lasts almost six months — cold and with just a little sunshine. No wonder we’re craving warmth, sun and a pool!
 
-{{ smugmug(key="7TTMgT", caption="Click to view the Gran Canaria 2025 gallery" thumbnail="https://photos.smugmug.com/photos/i-bqQ4PBW/0/LBjkh4w5X7Zp7gzFMxkbT2LDqKxZcQX6WxgJ7cjx6/S/i-bqQ4PBW-S.jpg", alt="Gran Canaria 2025") }}
+{{ smugmug(key="7TTMgT", caption="Click to view the Gran Canaria 2025 gallery" thumbnail="https://photos.smugmug.com/photos/i-bqQ4PBW/0/LBjkh4w5X7Zp7gzFMxkbT2LDqKxZcQX6WxgJ7cjx6/S/i-bqQ4PBW-S.jpg" width="400" height="296", alt="Gran Canaria 2025") }}
 
 I can’t count how many times I’ve been to Gran Canaria. It’s not the most exciting place, but it’s one of the few islands with pleasant winter temperatures — and there’s a direct flight from Oslo. This year, we travelled with our friends Fredrik and Maren and stayed at the [Lopesan Baobab Resort](https://www.lopesan.com/en/hotels/spain/gran-canaria/meloneras/baobab-resort/) in Meloneras. The hotel has excellent wheelchair-accessible rooms. The cocktails and drinks are surprisingly good, especially compared to other bars in Meloneras. We loved the heated pool next to the bar! It has flat steps to walk in, making it perfect for me to do some leg training.
 
