fix: add picture

--- a/content/blog/2021-06-15_bolle.md
+++ b/content/blog/2021-06-15_bolle.md
@@ -12,6 +12,8 @@ tags = ["baking", "sweets"]
 
 Tangzhong buns—also known as *Boller* in Norwegian—are regular buns made extra soft and fluffy thanks to a simple flour-and-milk paste (called a roux or thickening) that's added to the dough. The result? Incredibly juicy and airy buns you'll want to make again and again.
 
+![Tangzong Bolle](https://photos.smugmug.com/photos/i-RdS4Lvj/0/KZhPMhNDKFDb5GLpqzQqj8429LxLJQkqFXHHW2GkV/M/i-RdS4Lvj-M.jpg)
+
 ---
 
 ## Ingredients
@@ -34,13 +36,13 @@ Tangzhong buns—also known as *Boller* in Norwegian—are regular buns made ext
 - 1 egg for brushing  
 - Raisins (optional)  
 
-## Method
+## Instructions
 
-### 1. Make the Prep Dough (Thickening)
+### Make the Prep Dough (Thickening)
 
 Start by making the thickening. Stir together the flour and milk in a saucepan. Heat gently over medium heat, stirring constantly until the mixture thickens (no hotter than 65 ℃). Let it cool to room temperature.
 
-### 2. Make the Main Dough
+### Make the Main Dough
 
 In a large bowl, mix together the flour, dry yeast (if using), vanilla sugar, and salt.  
 
@@ -52,7 +54,8 @@ Cut the butter into cubes and gradually add it to the dough. Knead for another 1
 
 Cover the bowl with plastic wrap and let the dough rise until doubled in size. After rising, knead and fold the dough about 4 times. If using raisins, knead them in now.
 
-### 3. Shape and Bake
+
+### Shape and Bake
 
 Divide the dough into 12 equal pieces. Form into smooth buns and place them on a baking tray lined with parchment paper. The buns can rise into each other—this helps them stay extra juicy.
 
@@ -63,6 +66,6 @@ Bake in a preheated oven at 210 ℃ (middle rack) for about 12 minutes. Let th
 
 ---
 
-## Tips
-
-The dough is quite soft and sticky when shaping. Avoid adding flour directly to the dough—just dust your hands lightly with flour if needed when forming the buns.
+> Tip
+> 
+> These bowls are a bit loose when you roll them out. You should not add flour to the dough, but rather use a little flour in your hands when rolling out the bowls, if necessary. If you want to convert your own Bolle recipe, this is the method: In the thickening, you take between five and ten percent of the flour that is originally in the recipe, and mix this with some of the liquid. The ratio is one part flour to five parts liquid.
