fix: wording and images.

--- a/content/blog/2025-06-28_tons-of-rock-2025.md
+++ b/content/blog/2025-06-28_tons-of-rock-2025.md
@@ -7,33 +7,42 @@ date = "2025-06-28"
 tags = ["norway", "oslo", "festival", "music"]
 +++
 
-It is almost a save tradition that my friends Daniel and Jonathan travel from Switzerland to join the Tons of Rock festival with Jo and me. A very important part is the socializing, grilling, cooking and making cocktails at home before we go up to the festival. 
+![Friends from Switzerland](https://photos.smugmug.com/Events/n-3SR2Rz/2025/Hightlights-2025/i-wpDqZtm/0/MbnTBhVRrFKHgT4hBdXz6dPbnGNWx7DD5X8LfSTJ9/M/20250625_144417-M.jpg)
 
-## Band highlights
+It has almost become a sacred tradition that my friends Daniel and Jonathan travel from Switzerland to join Jo and me at the Tons of Rock festival. A very important part of the experience is the socializing—grilling, cooking, and making cocktails at home before heading up to the festival.
 
-**Avenged Sevenfold** was headliner on Saturday and because of that the last band playing at the festival. For me, this was the best concert and show at Tons of Rock this year. Great song selection and incredible tasty and fashioned video illustration combining in the crowd. 
+![Barbecuing](https://photos.smugmug.com/Events/n-3SR2Rz/2025/Hightlights-2025/i-vpqj52N/0/LZGNFs6J32zRzdTXBKLMBKZzrPfHS89BKzCvzTJDw/M/20250626_133422-M.jpg)
 
-**Dream Theater** delivered a great concert. It was nice too see Portnoy back in the band. Mangini was a great drummer, but Portnoy gives the band more energy and fun. 
 
-**Steel Panter** is maybe not my favorite band, but the concert was fun and entertaining.
+## Band Highlights
 
-**Myles Kennedy** is one of my favorite singers. Miles was enjoying to play at Tons of Rock. The audience was not so awake, but a solid performance from Miles.
+**Avenged Sevenfold** headlined on Saturday and were the last band to play at the festival. For me, this was the best concert and show at Tons of Rock this year—great song selection and incredibly stylish and powerful video visuals that really pulled the crowd in.
 
-Great headliner on the first day was **Muse**. They delivered a powerful concert. 
+**Dream Theater** delivered a great concert. It was nice to see Portnoy back in the band. Mangini was a great drummer, but Portnoy brings more energy and fun to the performance.
 
-**Megadeth** played ok. Dave Mustane was grumpy and was not pleased with the techs.
+![Dream Theater](https://photos.smugmug.com/Events/n-3SR2Rz/2025/Hightlights-2025/i-mrQVFVg/0/NHB5xnDbcksL6vM3sz5q84zmNtCXtPW37Zfvk7kwd/M/20250625_190902-M.jpg)
 
-## The good
+**Steel Panther** may not be my favorite band, but their concert was fun and entertaining.
 
-- People at the festival are happy and in a good mood. No fighting, no violence, just peace and happiness. 
-- Good variety of food and drinks.
-- The festival is very clean. There is much less waste or littering at Tons of Rock than other festival I have been.
+**Myles Kennedy** is one of my favorite singers. He clearly enjoyed playing at Tons of Rock. The audience was a bit sleepy, but it was a solid performance from Myles.
 
-## The bad
+**Muse** headlined the first day and delivered a powerful show.
 
-- The steep price for the tickets. Early bird for next is already over 4'000 kr.
-- Some days it feels overcrowded. Especially Thursday it was impossible to reach the toilets. The good thing is, that the organizer fixed this problem with the toilets on friday.
-- Toilet disaster: Although the organizer fixed the toilet issue for the normal toilets, the normal toilets on Thursday, I was struggling a lot to get to the toilet. This year all the normal toilets were only reachable by stairs. That means, that I only could use the handicap toilets and there are way too few of them. People with a handicap need more time to do their business. At the main wheelchair, Scream Stage, should be at least 3 handicap toilets. I gave feedback about that, but sadly nothing has improved there.
-- The placement of the wheelchair ramp (stage) is completelly on the side. Of course the VIP get the best view. You are not able to see the stage properly and the sound is awful bad, especially when it is a bit windy. I remember the year, when Kiss played, the wheelchair stage was close to the sound guys and that was a perfect placement.
+**Megadeth** played an okay set. Dave Mustaine seemed grumpy and wasn’t pleased with the tech crew.
 
-I like Tons of Rock very much and it was always a highlight every year in summertime. But considering the prize, the lack of accessibility of toiletts and the wheelchair stage placement, I am not sure, if I am going to buy tickets for next year. 
+## The Good
+
+![Friends](https://photos.smugmug.com/Events/n-3SR2Rz/2025/Hightlights-2025/i-Ghh6Nw7/0/Lgndz7rBw34fsKWgR6JTRpKv98Z3N7RrDLJHbJx5j/M/20250625_205105-M.jpg)
+
+- People at the festival are happy and in a good mood. No fighting, no violence—just peace and happiness.  
+- Good variety of food and drinks.  
+- The festival is very clean. There is much less waste or littering at Tons of Rock than at other festivals I’ve been to.  
+
+## The Bad
+
+- The steep price of the tickets. The early bird ticket for next year is already over 4 000 kr.  
+- Some days felt overcrowded. Especially Thursday—it was nearly impossible to reach the toilets. The good news is that the organizers fixed this issue by Friday.  
+- **Handicap Toilet disaster**: Although the regular toilet situation improved on Friday, on Thursday it was a real struggle. All regular toilets were only accessible by stairs, so I had to use the accessible toilets—and there were far too few of them. People with disabilities often need more time, and at the main wheelchair area (Scream Stage), there should be at least three accessible toilets. I gave feedback about this, but sadly nothing has improved.  
+- The placement of the wheelchair platform is completely off to the side of the Scream stage. Of course, the VIP area gets the best view. From the wheelchair stage, you can’t see the main stage properly, and the sound is terrible—especially when it’s windy. I remember the year Kiss played, the wheelchair stage was close to the sound engineers, and that was a perfect placement.
+
+I really like Tons of Rock, and it has always been a highlight of the summer. But considering the price, the poor accessibility of the toilets, and the disappointing wheelchair stage placement at the Scream stage, I’m not sure if I’ll be buying tickets for next year.
