fix: add description for tons

--- a/content/blog/2025-06-28_tons-of-rock-2025.md
+++ b/content/blog/2025-06-28_tons-of-rock-2025.md
@@ -1,6 +1,6 @@
 +++
 title = "Tons of Rock 2025"
-description = ""
+description = "Recap of Tons of Rock 2025 — a summer tradition with friends, great bands, good vibes, and some honest thoughts on accessibility."
 date = "2025-06-28"
 
 [taxonomies]
