--- a/content/blog/2025-06-28_tons-of-rock-2025.md
+++ b/content/blog/2025-06-28_tons-of-rock-2025.md
@@ -28,7 +28,7 @@ It has almost become a sacred tradition that my friends Daniel and Jonathan trav
 
 **Muse** headlined the first day and delivered a powerful show.
 
-**Megadeth** played an okay set. Dave Mustaine seemed grumpy and wasn’t pleased with the tech crew.
+**Megadeth** played an okay set. Dave Mustaine seemed grumpy and wasn't pleased with the tech crew.
 
 ## The Good
 
@@ -36,13 +36,13 @@ It has almost become a sacred tradition that my friends Daniel and Jonathan trav
 
 - People at the festival are happy and in a good mood. No fighting, no violence—just peace and happiness.  
 - Good variety of food and drinks.  
-- The festival is very clean. There is much less waste or littering at Tons of Rock than at other festivals I’ve been to.  
+- The festival is very clean. There is much less waste or littering at Tons of Rock than at other festivals I've been to.  
 
 ## The Bad
 
 - The steep price of the tickets. The early bird ticket for next year is already over 4 000 kr.  
 - Some days felt overcrowded. Especially Thursday—it was nearly impossible to reach the toilets. The good news is that the organizers fixed this issue by Friday.  
 - **Handicap Toilet disaster**: Although the regular toilet situation improved on Friday, on Thursday it was a real struggle. All regular toilets were only accessible by stairs, so I had to use the accessible toilets—and there were far too few of them. People with disabilities often need more time, and at the main wheelchair area (Scream Stage), there should be at least three accessible toilets. I gave feedback about this, but sadly nothing has improved.  
-- The placement of the wheelchair platform is completely off to the side of the Scream stage. Of course, the VIP area gets the best view. From the wheelchair stage, you can’t see the main stage properly, and the sound is terrible—especially when it’s windy. I remember the year Kiss played, the wheelchair stage was close to the sound engineers, and that was a perfect placement.
+- The placement of the wheelchair platform is completely off to the side of the Scream stage. Of course, the VIP area gets the best view. From the wheelchair stage, you can't see the main stage properly, and the sound is terrible—especially when it's windy. I remember the year Kiss played, the wheelchair stage was close to the sound engineers, and that was a perfect placement.
 
-I really like Tons of Rock, and it has always been a highlight of the summer. But considering the price, the poor accessibility of the toilets, and the disappointing wheelchair stage placement at the Scream stage, I’m not sure if I’ll be buying tickets for next year.
+I really like Tons of Rock, and it has always been a highlight of the summer. But considering the price, the poor accessibility of the toilets, and the disappointing wheelchair stage placement at the Scream stage, I'm not sure if I'll be buying tickets for next year.
