feat: open graph images

--- a/content/blog/2025-06-28_tons-of-rock-2025.md
+++ b/content/blog/2025-06-28_tons-of-rock-2025.md
@@ -3,8 +3,12 @@ title = "Tons of Rock 2025"
 description = "Recap of Tons of Rock 2025 — a summer tradition with friends, great bands, good vibes, and some honest thoughts on accessibility."
 date = "2025-06-28"
 
+[extra]
+social_media_card = "/img/events/tons-of-rock-2025.jpg"
+
 [taxonomies]
 tags = ["norway", "oslo", "festival", "music"]
+
 +++
 
 ![Friends from Switzerland](https://photos.smugmug.com/Events/n-3SR2Rz/2025/Hightlights-2025/i-wpDqZtm/0/MbnTBhVRrFKHgT4hBdXz6dPbnGNWx7DD5X8LfSTJ9/M/20250625_144417-M.jpg)
